tests/last_duplicate_property_wins/last_duplicate_property_wins.exp
Error ----------------------------------------------------------------------------------------------------- test.js:14:3

Cannot shadow proto property `bar` [1] because string [2] is incompatible with function [3]. [incompatible-type]

   test.js:14:3
   14|   bar: string; // error: can't shadow proto with incompatible own
         ^^^

References:
   test.js:12:3
   12|   bar(): number { return 0; }
         ^^^ [1]
   test.js:14:8
   14|   bar: string; // error: can't shadow proto with incompatible own
              ^^^^^^ [2]
   test.js:12:3
   12|   bar(): number { return 0; }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:15:3

Cannot shadow proto property `qux` [1] because number [2] is incompatible with function [3]. [incompatible-type]

   test.js:15:3
   15|   qux: number; // error: can't shadow proto with incompatible own
         ^^^

References:
   test.js:17:3
   17|   qux(): string { return "hello" }
         ^^^ [1]
   test.js:15:8
   15|   qux: number; // error: can't shadow proto with incompatible own
              ^^^^^^ [2]
   test.js:17:3
   17|   qux(): string { return "hello" }
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:22:2

Cannot cast `(new C).foo()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:22:2
   22| ((new C).foo(): boolean); // last wins
        ^^^^^^^^^^^^^

References:
   test.js:8:10
    8|   foo(): string { return "hello" } // last wins
                ^^^^^^ [1]
   test.js:22:17
   22| ((new C).foo(): boolean); // last wins
                       ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:2

Cannot cast `(new C).x` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:23:2
   23| ((new C).x: boolean); // last wins
        ^^^^^^^^^

References:
   test.js:11:6
   11|   x: string; // last wins
            ^^^^^^ [1]
   test.js:23:13
   23| ((new C).x: boolean); // last wins
                   ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:24:2

Cannot cast `(new C).bar` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:24:2
   24| ((new C).bar: empty); // error: string ~> empty (own prop wins)
        ^^^^^^^^^^^

References:
   test.js:14:8
   14|   bar: string; // error: can't shadow proto with incompatible own
              ^^^^^^ [1]
   test.js:24:15
   24| ((new C).bar: empty); // error: string ~> empty (own prop wins)
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:25:2

Cannot cast `(new C).qux` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:25:2
   25| ((new C).qux: empty); // error: number ~> empty (own prop wins)
        ^^^^^^^^^^^

References:
   test.js:15:8
   15|   qux: number; // error: can't shadow proto with incompatible own
              ^^^^^^ [1]
   test.js:25:15
   25| ((new C).qux: empty); // error: number ~> empty (own prop wins)
                     ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:42:2

Cannot cast `o.foo()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:42:2
   42| (o.foo(): boolean); // last wins
        ^^^^^^^

References:
   test.js:31:10
   31|   foo(): string { return "hello" }, // last wins
                ^^^^^^ [1]
   test.js:42:11
   42| (o.foo(): boolean); // last wins
                 ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:43:2

Cannot cast `o.x` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:43:2
   43| (o.x: boolean); // last wins
        ^^^

References:
   test.js:33:6
   33|   x: "hello", // last wins
            ^^^^^^^ [1]
   test.js:43:7
   43| (o.x: boolean); // last wins
             ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:44:2

Cannot cast `o.bar` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:44:2
   44| (o.bar: boolean); // last wins
        ^^^^^

References:
   test.js:35:8
   35|   bar: "hello", // last wins
              ^^^^^^^ [1]
   test.js:44:9
   44| (o.bar: boolean); // last wins
               ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:45:2

Cannot cast `o.qux()` to boolean because string [1] is incompatible with boolean [2]. [incompatible-cast]

   test.js:45:2
   45| (o.qux(): boolean); // last wins
        ^^^^^^^

References:
   test.js:37:10
   37|   qux(): string { return "hello" }, // last wins
                ^^^^^^ [1]
   test.js:45:11
   45| (o.qux(): boolean); // last wins
                 ^^^^^^^ [2]



Found 10 errors
